# python_coach

./: README.md  START.md  TESTING.md  main.py  progress.json  pyproject.toml
backend/: README.md  main.py  requirements.txt  run.py
backend/api/: check.py  execute.py  problems.py  progress.py  stats.py
backend/core/: config.py  dependencies.py
backend/services/: problem_service.py
engine/: __init__.py  code_executor.py  progress_manager.py  solution_checker.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/problem/[id]/: page.tsx
frontend/components/editor/: ActionButtons.tsx  CodeEditor.tsx  OutputPanel.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/problem/: ProblemCard.tsx
frontend/components/progress/: ScoreDisplay.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ProgressBar.tsx
frontend/lib/: utils.ts
frontend/lib/api/: client.ts
frontend/lib/store/: progressStore.ts
frontend/types/: index.ts
problems/: __init__.py  problem_loader.py  problems.json
ui/: __init__.py  components.py
