[project]
name = "python-coach"
version = "0.1.0"
description = "Interactive Python learning platform with coding problems, hints, and solution checking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "streamlit>=1.28.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
python-coach = "main:main"
